[package]
name = "rusterchange"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
zmq = { version = "0.10.0", path = "../../rust-zmq" }
zmq-sys = { version = "0.12.0", path = "../../rust-zmq/zmq-sys" }
serde-pickle = "1.1.1"
serde_json = "1.0.115"
queues = "1.1.0"
